# tri-graphics

./: .gitmodules  CMakeLists.txt  README.txt  mkfile
assets/: playing_cards.png.txt
src/: definitions.h  main.cpp  sltr.h  sources.h  vertices.h
